# Computer-Vision-Module

./: Dockerfile  ML_CV_Lab2.ipynb  README.md  docker-compose.yaml  pyproject.toml
runs/detect/runs/train/exp/: args.yaml
src/: camera.py  camera_stream.py  logger.py  train.py  video_processor.py
src/computer_vision_model/: camera.py  logger.py  model_impl.py  train.py  video_processor.py
