[project]
name = "Compueter-Vision-Model"
version = "0.1.0"
description = ""
authors = [
    {name = "me",email = "my@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ultralytics (>=8.4.39,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
